correct bottom margin in container-1 and center align text in image placeholder

--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ a {
     border-style: none;
     border-radius: 8px;
     padding: 8px 32px;
+    margin-bottom: 48px;
 }
 
 .image-hold {
@@ -75,12 +76,9 @@ a {
     display: flex;
     height: 250px;
     width: 600px;
-}
-
-.image-text {
-    display: flex;
+    justify-content: center;
     align-items: center;
-    padding-left: 125px;
+    margin-bottom: 48px;
 }
 
 .info-header {
